# Learning

chatbot-fastapi-nextjs/backend/: .env.example  .gitignore  pyproject.toml
chatbot-fastapi-nextjs/backend/app/: app.py  db.py  llm.py  schemas.py
chatbot-fastapi-nextjs/backend/app/routers/: chat.py
chatbot-fastapi-nextjs/frontend/: nx.json  package.json  tsconfig.base.json
chatbot-fastapi-nextjs/frontend/apps/chatbot-app/: project.json  tsconfig.json
chatbot-fastapi-nextjs/frontend/apps/chatbot-app/app/: global.css  layout.tsx  page.tsx
chatbot-fastapi-nextjs/frontend/apps/chatbot-app/app/api/chat/: route.ts
chatbot-fastapi-nextjs/frontend/apps/chatbot-app/app/api/login/: route.ts
chatbot-fastapi-nextjs/frontend/apps/chatbot-app/app/chat/: page.tsx
chatbot-fastapi-nextjs/frontend/apps/chatbot-app/app/components/: icons.tsx
chatbot-fastapi-nextjs/frontend/apps/chatbot-app/app/design-system/: color-mode.tsx  provider.tsx
chatbot-fastapi-nextjs/frontend/apps/chatbot-app/app/lib/: util.tsx
fastapi-tutorial/: .env.example  README.md  pyproject.toml  test.db
fastapi-tutorial/app/: app.py  db.py  images.py  schemas.py  users.py
